<resources>
    <string name="app_name">IneedIT</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="username_error">Wrong username!</string>
    <string name="password_error">Wrong password!</string>
    <string name="title_activity_requests">RequestsActivity</string>
    <string name="title_activity_request_details">RequestDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="comments">Comments</string>
    <string name="request_name">Name</string>
    <string name="url">URL</string>
    <string name="create_request">Create request</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_request">Edit request</string>
    <string name="price">Price</string>
    <string name="n_a">n/a</string>
    <string name="title_activity_requests_drawer">RequestsDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_all_requests">All requests</string>
    <string name="activity_pending_requests">Pending requests</string>
    <string name="activity_accepted_requests">Accepted requests</string>
    <string name="activity_denied_requests">Denied requests</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="user_full_name">Full name</string>
    <string name="work_email_prompt">Set my work email to the same address I use for logging in (recommended)</string>
    <string name="user_work_email">Work email</string>
    <string name="user_phone_number">Phone number</string>
    <string name="user_work_adress">Work address</string>
    <string name="user_profile_privacy_message">Feel free to share only the data you would like others to know</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log out</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="denied">Denied</string>
    <string name="issued_by">Issued by</string>
    <string name="application_logo">Application logo</string>
    <string name="logo_corresponding_to_the_type">Logo corresponding to the type</string>
    <string name="phone_logo">Phone logo</string>
    <string name="email_logo">Email logo</string>
    <string name="location_logo">Location logo</string>
    <string name="send">SEND</string>
</resources>
