<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_36dp_2x"
            android:title="@string/log_out" />
    </group>

    <item android:title="Requests">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_all_requests"
                    android:icon="@drawable/ic_requests_all"
                    android:title="@string/all" />
                <item
                    android:id="@+id/nav_pending_requests"
                    android:icon="@drawable/ic_requests_pending"
                    android:title="@string/pending" />

                <item
                    android:id="@+id/nav_accepted_requests"
                    android:icon="@drawable/ic_requests_accepted"
                    android:title="@string/accepted" />

                <item
                    android:id="@+id/nav_denied_requests"
                    android:icon="@drawable/ic_requests_denied"
                    android:title="@string/denied" />
            </group>
        </menu>
    </item>
</menu>
